# simple-mouse-clicker

./: Cargo.toml  README.md
src/: main.rs
