[package]
authors = ["poly000"]
license = "MIT"
name = "simple-mouse-clicker"
version = "0.1.0"
edition = "2021"
description = "simple mouse clicker runs fast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34"
enigo = "0.0.14"

[profile.release]
lto = true
opt-level = "z"